complete all flights

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,4 +7,9 @@
     >
       ADD FLIGHT
     </a>
+    <a 
+      href="/flights" <%- title === 'Add Flight' ? 'class="active"' : '' %>
+    >
+      ALL FLIGHT
+    </a>
   </nav>
