complete edit form

--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/html-head') %>
-<link rel="stylesheet" href="/stylesheets/movies/index.css" />
+<link rel="stylesheet" href="/stylesheets/flights/style.css" />
 <%- include('../partials/nav') %>
 
 <main>
@@ -11,6 +11,7 @@
         <th>Airport</th>
         <th>FlightNO</th>
         <th>Departs</th>
+        <th>Details</th>
       </tr>
     </thead>
     <tbody>
@@ -20,6 +21,12 @@
           <td><%= flight.airport %></td>
           <td><%= flight.flightNo %></td>
           <td><%= flight.departs %></td>
+          <td><a href="/flights/<%= flight._id %>">Details</a></td>
+          <td>
+            <form action="/flights/<%= flight._id %>?_method=DELETE" method="POST">
+            <button>X</button>
+          </form>
+          </td>
         </tr>
       <% }) %>
     </tbody>
