--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -21,6 +21,48 @@
     <div>Departs </div>
     <div><%= flight.departs %></div>
   </section>
+</section>
+<% // new markup below %>
+<h2>Reviews</h2>
+<form 
+  id="add-review-form"
+  action="/flights/<%= flight._id %>/reviews"
+  method="POST"
+>
+  <label for="content-textarea">Review:</label>
+  <textarea name="content" id="content-textarea"></textarea>
+  <label for="rating-select">Rating:</label>
+  <select name="rating" id="rating-select">
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5" selected>5</option>
+  </select>
+  <button type="submit">Add Review</button>
+</form>
+<% if (flight.reviews.length) {%>
+<table>
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Review</th>
+      <th>Rating</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% flight.reviews.forEach(review => { %>
+      <tr>
+        <td><%= review.createdAt.toLocaleDateString() %></td>
+        <td><%= review.content %></td>
+        <td><%= review.rating %></td>
+      </tr>
+    <% }) %>
+  </tbody>
+</table>
+<% } else { %>
+<h3>No reviews yet</h3>
+<% } %>
 </main>
   
 <%- include('../partials/footer') %>
