--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -53,7 +53,7 @@
   <label for="content-textarea">Ticket:</label>
   <textarea name="content" id="content-textarea"></textarea>
   <label for="input-price">Price:</label>
-  <input type="number">
+  <input name="price" type="number">
   <button type="submit">Add Price</button>
   <label for="input-seat">Seat</label>
   <input name="seat" required pattern="[A-F][1-9]\d?">
